@@ -1,6 +1,8 @@
 Camlp4 Version 3.04+1
 ---------------------
 
+- [11 Jan 02] Added a test in grammars using Plexer that a keyword is not
+  used also as parameter of a LIDENT or a UIDENT.
 - [04 Jan 02] Fixed bug in pa_sml (SML syntax): the function definitions
   with several currified parameters did not work. It works now, but the
   previous code was supposed to treat let ("fun" in SML syntax) definitions
